Made Russian language a singleton
Removed some static initializations of the language instance and nested objects